--- a/src/index.css
+++ b/src/index.css
@@ -14,9 +14,51 @@ code {
 
 .navigation-bar {
   display: flex;
+  flex-direction: row;
   justify-content: space-evenly;
 }
 
 .hidden {
   display: none;
+}
+
+.wrapper {
+  margin-inline: auto;
+  width: 600px;
+  border: 3px solid lime;
+}
+
+.mode-button-container {
+  width: 100%;
+  border: 3px solid skyblue;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.form {
+  border: 3px solid magenta;
+  width: 100%;
+}
+
+.submit-button-container {
+  margin-top: 20px;
+  border: 3px solid green;
+  width: 100%;
+  height: 50px;
+  text-align: center;
+}
+
+#submit-button {
+  color: white;
+  border: none;
+  background-color: #00a88c;
+  width: 50%;
+  height: 100%;
+  border-radius: 8px;
+  font-size: 20px;
+}
+
+#submit-button:hover {
+  cursor: pointer;
 }
