--- a/src/index.css
+++ b/src/index.css
@@ -19,26 +19,81 @@ code {
 }
 
 .hidden {
-  display: none;
+  display: none !important;
 }
 
 .wrapper {
   margin-inline: auto;
-  width: 600px;
+  width: 650px;
   border: 3px solid lime;
 }
 
 .mode-button-container {
   width: 100%;
-  border: 3px solid skyblue;
+  /* border: 3px solid skyblue; */
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
 
+.mode-button-container > button {
+  background-color: #00a88c;
+  color: white;
+  border: 2px solid #028670;
+  border-radius: 2px;
+  font-size: 14px;
+  margin-left: 2px;
+  margin-right: 2px;
+}
+
+.mode-button-container > button:hover {
+  cursor: pointer;
+  background-color: #005e50;
+}
+
+.active-mode {
+  background-color: #005e50 !important;
+  border: 2px solid #005e50 !important;
+}
+
 .form {
   border: 3px solid magenta;
   width: 100%;
+}
+
+.input-container {
+  border: 2px solid yellow;
+  height: 40px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+#compounding-period-container {
+  display: inline-block;
+  height: auto !important;
+}
+
+#payment-period-container {
+  display: inline-block;
+  height: auto !important;
+}
+
+#payment-timing-container {
+  display: inline-block;
+  height: auto !important;
+}
+
+.input-labels {
+  border: 2px solid grey;
+  text-align: center;
+  
+}
+.input-fields {
+  border: 2px solid #b1b1b1;
+  border-radius: 6px;
+  width: 50%;
 }
 
 .submit-button-container {
