--- a/src/index.css
+++ b/src/index.css
@@ -177,7 +177,7 @@ a:active { text-decoration: none; }
 .input-labels {
   color: #020908;
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   padding-left: 2%;
   font-size: 16px;
   font-weight: bold;
